# websitequarkustemplate

./: .gitignore  Dockerfile  README.md  pom.xml
src/main/java/com/tcarvi/websitequarkustemplate/: WebsiteQuarkusTemplateApplication.java
src/main/java/com/tcarvi/websitequarkustemplate/rest/server/model/: RestServerMultipartBody.java
src/main/java/com/tcarvi/websitequarkustemplate/rest/server/resource/: HelloResource.java  RestServerResource.java
src/main/java/com/tcarvi/websitequarkustemplate/rest/server/resource/wasm/: WasmFunctions.java
src/main/java/com/tcarvi/websitequarkustemplate/rest/server/service/: RestServerService.java  RestServerUploadService.java
src/main/resources/: application.yaml
src/main/resources/templates/: wasmtemplate.html
src/main/wasm/cpp/: cppScriptInButton.cpp
src/main/wasm/from-c/: WasmExecutionInJs.js
src/main/wasm/from-kotlin/: kotlinScriptInButton.kt
src/main/wasm/from-rust/: Cargo.toml  README.md
src/main/wasm/from-rust/src/: lib.rs
src/main/wasm/from-rust/wat-to-wasm/: WatCompiledToWasm.wasm
src/main/wasm/from-swift/: swiftScriptInButton.swift
src/main/wasm/go/: goScriptInButton.go
